--- a/app/views/commodities/_form_fields.html.haml
+++ b/app/views/commodities/_form_fields.html.haml
@@ -1,17 +1,17 @@
-%div
+.form-group
   =f.label :name
   %br
-  =f.text_field :name, autofocus: true
+  =f.text_field :name, autofocus: true, class: 'form-control'
 
-%div
+.form-group
   =f.label :symbol
   %br
-  =f.text_field :symbol
+  =f.text_field :symbol, class: 'form-control'
 
-%div
+.form-group
   =f.label :market
   %br
-  =f.select :market, options_for_select(Commodity::MARKETS.map(&:upcase) , commodity.market)
+  =f.select :market, options_for_select(Commodity::MARKETS.map(&:upcase) , commodity.market), {}, class: 'form-control'
 .actions
   =f.submit 'Save', class: 'save_button', title: 'Click here to save the new commodity.'
   =link_to 'Back', entity_commodities_path(commodity.entity), class: 'back_button', title: 'Click here to return to the list of commodities'
