--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,4 +1,8 @@
 %h2#page_title Edit account
+
 =render "shared/errors", :resource => @account
-=form_for(@account) do |f|  
-  =render "form_fields", account: @account, f: f
+
+.row
+  .col-md-4
+    =form_for(@account) do |f|  
+      =render "form_fields", account: @account, f: f
