--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -1,5 +1,8 @@
 %h2#page_title New account
 
 =render "shared/errors", :resource => @account
-=form_for([@account.entity, @account]) do |f|  
-  =render "form_fields", account: @account, f: f
+
+.row
+  .col-md-4
+    =form_for([@account.entity, @account]) do |f|  
+      =render "form_fields", account: @account, f: f
