--- a/app/views/commodities/edit.html.haml
+++ b/app/views/commodities/edit.html.haml
@@ -1,4 +1,7 @@
 %h2#page_title Edit commodity
 =render 'shared/errors', resource: @commodity
-=form_for(@commodity) do |f|
-  =render 'form_fields', commodity: @commodity, f: f
+
+.row
+  .col-md-4
+    =form_for(@commodity) do |f|
+      =render 'form_fields', commodity: @commodity, f: f
