--- a/app/views/commodities/index.html.haml
+++ b/app/views/commodities/index.html.haml
@@ -1,23 +1,25 @@
 %h2#page_title Commodities
 
-%table.list#commodities_table{ cellspacing: 0, cellpadding: 0 }
-  %tr
-    %th Name
-    %th Symbol
-    %th Market
-    %th Most recent price
-    %th.action_cell &nbsp;
-  -@commodities.each do |commodity|
-    %tr
-      %td= commodity.name
-      %td= commodity.symbol
-      %td= commodity.market
-      %td= format_price(commodity.latest_price.try(:price))
-      %td.action_cell
-        =link_to 'Prices', commodity_prices_path(commodity), class: 'prices_button', title: 'Click here to manage prices for this commodity.'
-        =link_to 'Edit', edit_commodity_path(commodity), class: 'edit_button', title: 'Click here to edit the commodity.'
-        =render 'shared/delete_form', resource: commodity, url: commodity_url(commodity)
-.actions
-  =link_to 'Add', new_entity_commodity_path(@entity), class: 'add_button', title: 'Click here to add a new commodity.'
-  =link_to 'Back', entities_path, class: 'back_button', title: 'Click here to return to the list of entities.'
-  =link_to 'Download prices', download_entity_prices_path, method: :patch, class: 'download_button', title: 'Click here to download prices'
+.row
+  .col-md-8
+    %table.table#commodities_table{ cellspacing: 0, cellpadding: 0 }
+      %tr
+        %th Name
+        %th Symbol
+        %th Market
+        %th.number_column Most recent price
+        %th.action_cell &nbsp;
+      -@commodities.each do |commodity|
+        %tr
+          %td= commodity.name
+          %td= commodity.symbol
+          %td= commodity.market
+          %td.number_column= format_price(commodity.latest_price.try(:price))
+          %td.action_cell
+            =link_to 'Prices', commodity_prices_path(commodity), class: 'prices_button', title: 'Click here to manage prices for this commodity.'
+            =link_to 'Edit', edit_commodity_path(commodity), class: 'edit_button', title: 'Click here to edit the commodity.'
+            =render 'shared/delete_form', resource: commodity, url: commodity_url(commodity)
+    .actions
+      =link_to 'Add', new_entity_commodity_path(@entity), class: 'add_button', title: 'Click here to add a new commodity.'
+      =link_to 'Back', entities_path, class: 'back_button', title: 'Click here to return to the list of entities.'
+      =link_to 'Download prices', download_entity_prices_path, method: :patch, class: 'download_button', title: 'Click here to download prices'
