--- a/app/views/budget_items/index.html.haml
+++ b/app/views/budget_items/index.html.haml
@@ -1,6 +1,6 @@
 %h2#page_title Budget items
 
-%table.list#budget_items_table{ cellspacing: 0, cellpadding: 0}
+%table.table#budget_items_table{ cellspacing: 0, cellpadding: 0}
   %tr
     %th Account
     -@budget.periods.each do |period|
