--- a/app/views/budget_items/_average_fields.html.haml
+++ b/app/views/budget_items/_average_fields.html.haml
@@ -1,4 +1,4 @@
 %div.method_average
   =form.label :amount, 'Amount'
   %br
-  =number_field_tag 'distributor[options][amount]', distributor.amount, class: 'method_average', id: 'distributor_options_amount'
+  =number_field_tag 'distributor[options][amount]', distributor.amount, class: 'method_average form-control', id: 'distributor_options_amount'
