--- a/app/views/budget_items/_form_fields.html.haml
+++ b/app/views/budget_items/_form_fields.html.haml
@@ -1,33 +1,12 @@
-:javascript
-  $(function() {
-    $("#distributor_method").on("change", function() {
-      showSelectedMethod();
-    });
-    showSelectedMethod();
-  });
-  
-  function showSelectedMethod() {
-    $("#distributor_method option").each(function() {
-      showMethod(this.value, this.selected);
-    });
-  }
-  
-  function showMethod(method, visible) {
-    if (visible) {
-      $("div.method_" + method).show();
-    } else {
-      $("div.method_" + method).hide();
-    }
-  }
-%div
+.form-group
   =f.label :account_id
   %br
-  =f.select :account_id, account_options(budget_item)
+  =f.select :account_id, account_options(budget_item), {}, class: 'form-control'
 =fields_for(:distributor, distributor) do |distributor_fields|
-  %div
+  .form-group
     =distributor_fields.label :method, 'Method'
     %br
-    =distributor_fields.select :method, options_for_select(BudgetItemDistributor.methods)
+    =distributor_fields.select :method, options_for_select(BudgetItemDistributor.methods), {}, class: 'form-control'
   =distributor_fields.fields_for(:options) do |args_fields|
     =render 'average_fields', form: args_fields, budget_item: budget_item, distributor: distributor
     =render 'total_fields', form: args_fields, budget_item: budget_item, distributor: distributor
