--- a/app/views/budgets/_form_fields.html.haml
+++ b/app/views/budgets/_form_fields.html.haml
@@ -1,19 +1,19 @@
-%div
+.form-group
   =f.label :name
   %br
-  =f.text_field :name
-%div
+  =f.text_field :name, class: 'form-control'
+.form-group
   =f.label :start_date
   %br
-  =f.text_field :start_date
-%div
+  =f.text_field :start_date, class: 'form-control'
+.form-group
   =f.label :period
   %br
-  =f.select :period, Budget.all_periods
-%div
+  =f.select :period, Budget.all_periods, {}, class: 'form-control'
+.form-group
   =f.label :period_count
   %br
-  =f.text_field :period_count, type: :number
+  =f.text_field :period_count, type: :number, class: 'form-control'
 .actions
   =f.submit "Save", class: 'save_button', title: 'Click here to save the budget.'
   =link_to "Back", entity_budgets_path(budget.entity), class: 'back_button', title: 'Click here to return the list of budgets.'
