[#85146120] separated the ajax navigation from the plain html navigation

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,10 @@
     .container-fluid
       #header
         %nav{role: "navigation"}
-          =render_navigation
+          #html_nav
+            =render_navigation
+          #ajax_nav{ style: "display: none;" }
+            =render_navigation context: :ajax
       #content
         = render "shared/flash", :flash => flash
         = yield
