fixed misc problems with datepickers, autofocus on year in budget forms

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require common
+ *= require jquery-ui-1.10.3.custom.min
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
