--- a/app/views/pages/app/_transaction_item_form.html.haml
+++ b/app/views/pages/app/_transaction_item_form.html.haml
@@ -1,6 +1,6 @@
 %tr{ data: { bind: "with: newTransactionItem"}}
   %td.number_column
-    %input.date_field.form-control{ type: 'text', placeholder: 'Transaction date', data: { bind: "datePicker: formattedTransactionDate" } }
+    %input.form-control{ type: 'text', placeholder: 'Transaction date', data: { bind: "datePicker: formattedTransactionDate" } }
   %td
     %input.form-control{ type: 'text', placeholder: 'Description', data: { bind: "value: description" } }
   %td
