--- a/app/views/budgets/_form_fields.html.haml
+++ b/app/views/budgets/_form_fields.html.haml
@@ -1,11 +1,11 @@
 .form-group
   =f.label :name
   %br
-  =f.text_field :name, class: 'form-control'
+  =f.text_field :name, class: 'form-control', autofocus: true
 .form-group
   =f.label :start_date
   %br
-  =f.text_field :start_date, class: 'form-control'
+  =f.text_field :start_date, class: 'form-control', class: 'date_field'
 .form-group
   =f.label :period
   %br
