--- a/app/views/budgets/_form_fields.html.haml
+++ b/app/views/budgets/_form_fields.html.haml
@@ -5,7 +5,7 @@
 .form-group
   =f.label :start_date
   %br
-  =f.text_field :start_date, class: 'form-control', class: 'date_field'
+  =f.text_field :start_date, class: 'form-control date_field'
 .form-group
   =f.label :period
   %br
