cleaned up report styles a bit

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -16,3 +16,15 @@
 .account_depth_3 {
   padding-left: 6em;
 }
+
+.balance_depth_1 {
+  padding-right: 1em;
+};
+
+.balance_depth_2 {
+  padding-right: 2em;
+};
+
+.balance_depth_3 {
+  padding-right: 3em;
+};
