--- a/app/views/reports/_table.html.haml
+++ b/app/views/reports/_table.html.haml
@@ -4,5 +4,7 @@
     %th Balance
   -report.content.each do |r|
     %tr{class: r[:depth] == 0 ? 'report_header' : 'report_data'}
-      %td{ class: "account_#{r[:depth]}" }= r[:account]
-      %td{ class: "number_column balance_#{r[:depth]}"}= r[:balance]
+      %td
+        %div{ class: "account_depth_#{r[:depth]}" }= r[:account]
+      %td
+        %div{ class: "number_column balance_depth_#{r[:depth]}"}= r[:balance]
