[#85334100] add accounts list to new budget monitor form

--- a/app/views/budget_monitors/new.html.haml
+++ b/app/views/budget_monitors/new.html.haml
@@ -2,5 +2,8 @@
   .col-md-6.col-md-offset-3
     %h2#page_title New Budget monitor
 
-
-
+.row
+  .col-md-6.col-md-offset-3
+    =form_for(@budget_monitor) do |f|
+      .form_group
+        =f.select :account_id, grouped_options_for_select(all_accounts), {}, class: 'form-control'
