--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -7,12 +7,16 @@
   %tr
     %th Transaction Date
     %th Description
+    %th Memo
+    %th Confirmation
     %th Amount
     %th.action_cell &nbsp;
   -@transactions.each_with_index do |transaction, index|
     %tr{class: index % 2 == 0 ? 'table_row' : 'alt_table_row'}
       %td.transaction_date_column= transaction.transaction_date.strftime("%-m/%-d/%Y")
       %td.transaction_description_column= link_to(transaction.description, transaction_path(transaction))
+      %td.transaction_memo_column= transaction.memo
+      %td.transaction_confirmation_column= transaction.confirmation
       %td.number_column= format_currency(transaction.total_credits.abs)
       %td.action_cell
         = link_to 'Attachments', transaction_attachments_path(transaction), class: 'attachments_button', title: 'Click here to see the attachments for this transaction.'
