[#80087226] finished changes to 'enter transaction' feature

--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -1,4 +1,4 @@
-%h2#page_subtitle Transactions
+%h2#page_title Transactions
 
 .new_transaction_container
   =form_for([@account || @entity, @transaction]) do |f|
