--- a/app/views/accounts/new_import.html.haml
+++ b/app/views/accounts/new_import.html.haml
@@ -1,1 +1,9 @@
-%h2#page_title Import accounts
+.row
+  .col-md-4.col-md-offset-4
+    %h2#page_title Import accounts
+
+    =form_tag(import_entity_accounts_path(@entity), multipart: true) do
+      .form-group
+        =label_tag 'import[data]', 'Data'
+        =file_field_tag 'import[data]', class: 'form-control'
+      =submit_tag "Submit", class: 'save_button'
