[#91331270] refined controller handling of gnucash importer

--- a/app/views/entities/new_gnucash.html.haml
+++ b/app/views/entities/new_gnucash.html.haml
@@ -2,6 +2,7 @@
   .col-md-4.col-md-offset-4
     %h2#page_title Import from GnuCash
 
+    =render 'shared/errors', :resource => @importer
     =form_tag(gnucash_entity_path(@entity), multipart: true) do
       .form-group
         =label_tag 'import[data]', 'Data'
