[#91331270] position the import menu

--- a/app/views/entities/import.html.haml
+++ b/app/views/entities/import.html.haml
@@ -1,3 +1,5 @@
-%h2#page_title Import
+.row
+  .col-md-4.col-md-offset-4
+    %h2#page_title Import
 
-=render_navigation level: 2
+    =render_navigation level: 2
