added style for 4th level of account depth

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -16,6 +16,9 @@
 .account_depth_3 {
   padding-left: 6em;
 }
+.account_depth_4 {
+  padding-left: 8em;
+}
 
 .balance_depth_1 {
   padding-right: 1em;
@@ -27,4 +30,8 @@
 
 .balance_depth_3 {
   padding-right: 3em;
+};
+
+.balance_depth_4 {
+  padding-right: 4em;
 };
