--- a/app/views/entities/new.html.haml
+++ b/app/views/entities/new.html.haml
@@ -1,8 +1,20 @@
-%h2#page_title New entity
-
-=render "shared/errors", :resource => @entity
-
 .row
-  .col-md-3
+  .col-md-4.col-md-offset-4
+    %h2#page_title New entity
+
+    =render "shared/errors", :resource => @entity
+    =render 'shared/errors', :resource => @importer
+    -if @error_message
+      .alert.alert-danger
+        An error occurred while performing the import operation.
+        %br
+        =@error_message
+
     =form_for(@entity) do |f|  
-      =render 'form_fields', entity: @entity, f: f
+      .form-group
+        =f.label :name
+        =f.text_field :name, class: 'form-control', autofocus: true
+      .form-group
+        =f.label :data
+        =f.file_field :data, class: 'form-control'
+      =submit_tag "Submit", class: 'save_button'
