correct button text

--- a/app/views/entities/new.html.haml
+++ b/app/views/entities/new.html.haml
@@ -17,4 +17,4 @@
       .form-group
         =f.label :data
         =f.file_field :data, class: 'form-control'
-      =submit_tag "Submit", class: 'save_button'
+      =submit_tag "Save", class: 'save_button'
