[#93264898] finished making 'record a stock split' pass

--- a/app/views/lots/index.html.haml
+++ b/app/views/lots/index.html.haml
@@ -16,6 +16,6 @@
       %td.number_column= format_currency(lot.cost)
       %td.number_column= format_currency(lot.current_value)
       %td.number_column= format_currency(lot.gains)
-      %td.action_cell= link_to 'Split', new_split_commodity_path(lot.commodity), class: 'split_button', title: 'Click here to record a stock split.'
+      %td.action_cell= link_to 'Split', new_split_commodity_path(lot.commodity, account_id: @account.id), class: 'split_button', title: 'Click here to record a stock split.'
 .actions
   =link_to 'Back', holdings_account_path(@account.parent), class: 'back_button', title: 'Click here to return to the account holdings page.'
