--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -321,6 +321,16 @@ table.attributes {
   background-image: image-url("sort_small.png");
 }
 
+.split_button {
+  @extend .any_button;
+  background-image: image-url("split.png");
+}
+
+.small_split_button {
+  @extend .any_small_button;
+  background-image: image-url("split_small.png");
+}
+
 .standard_button {
   background-color: $white;
   border: 3px solid $dark-grey;
